[tool.poetry]
name = "jax-env"
version = "0.1.0"
description = ""
authors = ["Haohang Li <hli113@stevens.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9, < 3.11"
jax = {extras = ["cuda12-pip"], version = "^0.4.20"}
polars = "^0.19.15"

[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
